Ensure radio button focus is always visible by adding important modifier

--- a/apps/web-mzima-client/src/app/shared/components/company-info/company-info.component.scss
+++ b/apps/web-mzima-client/src/app/shared/components/company-info/company-info.component.scss
@@ -118,7 +118,7 @@
 
   .mat-expansion-panel-header {
     &:focus {
-      outline: auto;
+      outline: auto !important;
     }
   }
 
